--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -1,8 +1,9 @@
 {% extends 'layouts/main.html' %}
-{% block title %}New Venue{% endblock %}
+{% block title %} New Venue {% endblock %}
 {% block content %}
 <div class="form-wrapper">
   <form method="post" class="form">
+    {{ form.csrf_token }}
     <h3 class="form-heading">List a new venue <a href="{{ url_for('index') }}" title="Back to homepage"><i
           class="fa fa-home pull-right"></i></a></h3>
     <div class="form-group">
@@ -32,12 +33,30 @@
       <label for="genres">Genres</label>
       <small>Ctrl+Click to select multiple</small>
       {{form.genres(class_ = 'form-control' ,placeholder='Genres, separated by commas',autofocus = true)}}
-      <!-- {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }} -->
     </div>
     <div class="form-group">
-      <label for="genres">Facebook Link</label>
-      {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id='form.facebook_link', autofocus = true) }}
+      <label for="">Seeking Talent ? </label>
+      <span>&emsp;&emsp;{{form.seeking_talent(class_ = '' ,autofocus = true)}}</span>
     </div>
+    <div class="form-group">
+      <label for="seeking_description">Seeking Description</label>
+      {{ form.seeking_description(class_ = 'form-control',rows=2, id='seeking_description', autofocus = true) }}
+    </div>
+    <div class="form-group">
+      <label for="image_link">image_link</label>
+      {{ form.image_link(class_ = 'form-control', placeholder='http://', id='image_link', autofocus = true) }}
+    </div>
+
+    <div class="form-group">
+      <label for="facebook_link">Facebook Link</label>
+      {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id='facebook_link', autofocus = true) }}
+    </div>
+
+    <div class="form-group">
+      <label for="website">Website</label>
+      {{ form.website_link(class_ = 'form-control', placeholder='http://', id='website_link', autofocus = true) }}
+    </div>
+
     <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
   </form>
 </div>
